# hangman-vix

./: CHANGELOG.md  README.md  hangman-vix.cabal
app/: Main.hs
src/Game/: Auxiliary.hs  Runner.hs
wordlists/: batch37.txt  movies.txt  premierleague.txt
