cabal-version:      2.4
name:               hangman-vix
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             vixandrade
maintainer:         vix.andrade21@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable vix-hang
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , game
                    , ansi-terminal
                    , transformers
    hs-source-dirs:   app
    default-language: Haskell2010

library game
    build-depends:   base ^>=4.14.3.0
                    , mtl
                    , text
                    , transformers
                    , ansi-terminal
                    , MonadRandom
                    , directory
    exposed-modules:   Game.Auxiliary
                     , Game.Runner
    hs-source-dirs:   src
    default-language: Haskell2010
